# diffusion-speech

./: .gitignore  README.md  models.py  prepare_acoustic_data.py  prepare_duration_data.py  pyproject.toml  sample.py  synthesize.py  train.py
configs/: train_acoustic_dit_b.yaml  train_duration_dit_s.yaml
diffusion/: gaussian_diffusion.py  respace.py
