[project]
name = "diffusion-speech"
version = "0.1.0"
description = "A text to speech model using diffusion models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "g2p-en>=2.1.0",
    "matplotlib>=3.9.3",
    "nltk>=3.9.1",
    "numpy>=2.2.0",
    "phonemizer>=3.3.0",
    "soundfile>=0.12.1",
    "textgrid>=1.6.1",
    "torch>=2.5.1",
    "vocos>=0.1.0",
    "wandb>=0.19.0",
]
